--- a/index.html
+++ b/index.html
@@ -19,8 +19,15 @@
     </div>
 
     <div class="tarjeta">
-        <img src="foto" alt="Estudiante">
+        <img src="https://hamm0nt.github.io/Hojas-de-vida/hojas%20de%20vida/Juan%20Cervantes/img/foto.jpeg" alt="Estudiante">
         <h3>Cervantes Juan</h3>
+        <p>Licenciatura en Tecnología</p>
+        <a href="https://hamm0nt.github.io/Hojas-de-vida/hojas%20de%20vida/Juan%20Cervantes/index.html" target="_blank">Ver Hoja de Vida</a>
+    </div>
+
+    <div class="tarjeta">
+        <img src="foto" alt="Estudiante">
+        <h3>García Emerson</h3>
         <p>Licenciatura en Tecnología</p>
         <a href="cv" target="_blank">Ver Hoja de Vida</a>
     </div>
@@ -49,4 +56,5 @@
 </div>
 
 </body>
+
 </html>
